# zlit

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-new_feature.yml  03-enhancement.yml
.github/workflows/: bump-tag.yml  enforce_conventional_commits.yml  enforce_general_linting.yml  enforce_python_linting.yml  enforce_security_linting.yml
app/: side_menu.py  user_manager.py
app/pages/: 01 - summary.py  02 - entry_tickets.py  03 - topup_tokens.py  04 - entry_only_tickets.py  05 - bbq.py  06 - kitchen.py  09 - home.py  page_definer.py  standard_page_content.py
data/: comparative_scatter.py  data_manager.py
zlit/pages/: 01 - summary.py  02 - entry_tickets.py  03 - topup_tokens.py  04 - entry_only_tickets.py  05 - bbq.py  06 - kitchen.py  test.ipynb
